[package]
name = "pma-mako"
version = "0.1.0"
authors = ["Vilius Povilaika <vilius.povilaika@gmail.com>"]
license = "Apache-2.0"
description = "A stupid fast phpmyadmin brute-force tool"
readme = "README.md"
homepage = "https://github.com/viliuspovilaika/pma-mako"
repository = "https://github.com/viliuspovilaika/pma-mako"
keywords = ["cli", "brute-force", "mako", "phpmyadmin"]
categories = ["command-line-utilities"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies"] }
flume = { version = "0.10.7" }
tokio = { version = "1.8.1", features = ["full"] }
indicatif = "0.16.2"
console = "0.14.1"